--- a/portfolio-main/index.html
+++ b/portfolio-main/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
+    
+
 </head>
 
 <body>
@@ -34,6 +36,20 @@
             </div>
             <!-- <div class="rightsec"><img src="m1-removebg-preview.png" alt=""></div> -->
         </section>
+        <hr class="horizontaline">
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="text-center">About Me</h1>
+                        <div class="col-4 bg-danger"><img class="bg-black" src="" alt="" style="height: 60vh; width: 20vw;"></div>
+
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
         <!-- <br> -->
         <hr class="horizontaline">
         <section class="secondsec">
@@ -60,10 +76,27 @@
                     <div class="v-des">With React, I have built dynamic and interactive user interfaces, leveraging its component-based architecture and virtual DOM for efficient rendering and seamless updates. React's declarative syntax and extensive ecosystem have enabled me to develop scalable and responsive web applications with ease.</div>
                 </div>
                 <div class="vertical">
-                    <img class="imgt2" src="premiere pro.png" alt="">
-                    <div class="v-title purple"><b>Premierepro</b>
-                        <div> 2019 - Current</div></div>
-                    <div class="v-des"> I have edited and transformed raw footage into polished videos, leveraging its powerful editing tools and intuitive interface. Premiere Pro's extensive features and seamless integration with other Adobe Creative Cloud applications have allowed me to create professional-grade video content efficiently.</div>
+                    <img class="imgt" src="figma.png" alt="">
+                    <div class="v-title purple"><b>Designer</b>
+                    <div> 2022 - Current</div></div>
+                    <div class="v-des">crafting seamless user journeys, and designing interfaces that prioritize usability and accessibility. My skills encompass wireframing, prototyping, and user testing to ensure the final product meets both user needs and business goals. I stay updated on design trends and best practices to deliver innovative solutions that enhance user satisfaction and engagement. With a keen eye for detail and a passion for user-centric design, I strive to create impactful and delightful experiences across web and mobile platforms.</div>
+                </div>
+            </div>
+        </section>
+        <section class="secondsec">
+            <div class="box">
+                <!-- 4 vertical value add in one box -->
+                <div class="vertical">
+                    <img class="imgt" src="logo.png" alt="">
+                    <div class="v-title purple"><b>Designer</b>
+                    <div> 2022 - Current</div></div>
+                    <div class="v-des">crafting seamless user journeys, and designing interfaces that prioritize usability and accessibility. My skills encompass wireframing, prototyping, and user testing to ensure the final product meets both user needs and business goals. I stay updated on design trends and best practices to deliver innovative solutions that enhance user satisfaction and engagement. With a keen eye for detail and a passion for user-centric design, I strive to create impactful and delightful experiences across web and mobile platforms.</div>
+                </div>
+                <div class="vertical">
+                    <img class="imgt1" src="Laravel.png" alt="">
+                    <div class="v-title purple"><b>Laravel developer</b>
+                    <div> 2021 - Current</div></div>
+                    <div class="v-des">During my experience with Laravel, I have successfully developed robust and scalable web applications, leveraging the framework's elegant syntax and extensive feature set. I have utilized Laravel's powerful ORM, routing system, and built-in security measures to deliver efficient and secure solutions. Working with Laravel has greatly enhanced my productivity and allowed me to create high-quality software with ease.</div>
                 </div>
             </div>
         </section>
@@ -126,10 +159,11 @@
   <!-- Setup and start animation! -->
   <script>
     var typed = new Typed('#element', {
-      strings: ['Forntend Developer.','UXUI Designer', 'Graphic Designer', 'Video Editor' ],
+      strings: ['Forntend Developer.','UXUI Designer', 'Laravel Developer', 'Video Editor' ],
       typeSpeed: 50,
     });
   </script>
+  
 </body>
 
 </html>
