--- a/portfolio-main/index.html
+++ b/portfolio-main/index.html
@@ -14,6 +14,32 @@
 
 <body>
     <header>
+        <nav class="navbar navbar-expand-lg nav-bg " >
+            <div class="container-fluid">
+              <a class="navbar-brand left text-white m-md-5" href="#">MYK Portfolio</a>
+              <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse float-end " id="navbarNav">
+                <ul class="navbar-nav float-end ">
+                  <li class="nav-item">
+                    <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#fourservicesec">Projects</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="https://www.linkedin.com/in/muhammad-yaseenkhan-3a76aa248/" target="_blank">Linked In</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="https://github.com/Myk78" target="_blank">Git Hub</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
+    <!-- <header>
         <nav>
             <div class="left"> MYK Portfolio</div>
             <div class="right">
@@ -27,7 +53,8 @@
                 </ul>
             </div>
         </nav>
-    </header>
+    </header> -->
+
     <main>
         <section class="firstsec">
             <div class="leftsec">Hi my <span class="purple"> name</span> is, 
@@ -39,12 +66,11 @@
         <hr class="horizontaline">
         <section>
             <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h1 class="text-center">About Me</h1>
-                        <div class="col-4 bg-danger"><img class="bg-black" src="" alt="" style="height: 60vh; width: 20vw;"></div>
-
-                    </div>
+                <div class="row mb-4">
+                        <h1 class="text-center mb-5 purple">About Me</h1>
+                        <div class="col-4 bg-danger d-flex justify-content-center"><img class="bg-black " src="" alt="" style="height: 60vh; width: 20vw;"></div>
+                        <div class="offset-2 col-6">Hello! I'm Yaseen Khan, a passionate individual with a diverse skill set in web development and design. With expertise in HTML, CSS, JavaScript, React, PHP, Laravel, Figma, and video editing, I thrive on bringing creative ideas to life in the digital realm. Whether it's crafting captivating user interfaces, building dynamic websites, or editing engaging videos, I approach each project with enthusiasm and attention to detail. My journey in the world of technology is fueled by a commitment to continuous learning and a drive to create meaningful experiences for users. Let's connect and collaborate on something extraordinary!</div>
+                    
                 </div>
             </div>
 
@@ -104,6 +130,12 @@
         <section class="fourthsec ser" id="fourservicesec">
             <h1>Projects</h1>
             <div class="box">
+                <div class="service1 ser" ><h3 class="purple"> <u>Tour Tracker</u></h3></div> 
+                <div class="service1">
+                    <span>
+                        This is my final year project, it's a industerial project, In this project  .
+                    </span> 
+                </div>
                 <div class="service1 ser" ><h3 class="purple"> <u>STEEL & AGENCY</u></h3></div> 
                 <div class="service1">
                     <span>
